--- a/movies.css
+++ b/movies.css
@@ -23,7 +23,6 @@ h1 {
 
 main {
     width: 800px;
-    /* background-color: red; */
     margin: auto;
     border: 4px solid gray;
     border-radius: 20px;
@@ -38,7 +37,8 @@ main {
 
 .rooten {
     color: red;
-    font: 48pt bold;
+    font-size: 48pt;
+    font-weight: bold;
     background-image: url(./images/rbg.png);
     background-repeat: repeat-x;
     
@@ -62,12 +62,14 @@ main {
 }
 
 .bottomLeft .quote, .bottomRight .quote {
-font: 18px bold;
+font-size: 8pt;
+font-weight: bold;
 border: 2px thick gray;
 background-color: #E8DC9B;
 border-radius: 10px;
 float: left;
 width: 100%;
+padding: 8px;
 }
 
 .bottomLeft  img, .bottomRight img
@@ -84,6 +86,14 @@ width: 100%;
     float:left;
     width: 250px;
     background-color: #a2b964;
+    
+}
+.rightSection dl {
+    font-size: 8pt;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 
