--- a/movies.css
+++ b/movies.css
@@ -13,7 +13,6 @@ header{
 .banner{
     background-image: url(./images/bannerbg.png);
     background-repeat: repeat-x;
-       
 }
 h1 {
     font: 24pt bold;
@@ -41,11 +40,12 @@ main {
     font-weight: bold;
     background-image: url(./images/rbg.png);
     background-repeat: repeat-x;
+    background-size: auto 83px;
     
 }
 .rooten img {
     float: left;
-    height: 83px;
+    height: 77px;
 }
 
 .bottomLeft {
@@ -102,13 +102,25 @@ padding: 8px;
 }
 
 
+
 main #lastSection {
-    background-color: #a2b964;
+    background-color:#a2b964;
     clear: left;
     text-align: center;
     margin-bottom: 0px;
+    padding-bottom: 0%;
+}
+
+.rightSection ul{
+list-style-type: none;
+}
+
+.rightSection a{
+    text-decoration: none;
 }
 
 footer{
-    float:right;
+    /* float:right; */
+    display: inline-block;
+    
 }
